--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.1",
+    "@tanstack/vue-table": "^8.21.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vueuse/core": "^12.8.2",
     "class-variance-authority": "^0.7.1",
